--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      CORDOVA_ANDROID_GRADLE_DISTRIBUTION_URL: https://services.gradle.org/distributions/gradle-7.6.4-all.zip
+
     steps:
       # 1️⃣ Checkout
       - name: Checkout code
@@ -20,22 +23,22 @@ jobs:
         with:
           node-version: 18
 
-      # 3️⃣ Java 17 (STRICT)
+      # 3️⃣ Java 17 ONLY
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      # 4️⃣ Cordova (stable)
+      # 4️⃣ Cordova
       - name: Install Cordova
         run: npm install -g cordova@12
 
-      # 5️⃣ NPM deps
+      # 5️⃣ Dependencies
       - name: Install dependencies
         run: npm install
 
-      # 6️⃣ Android platform (stable)
+      # 6️⃣ Android platform
       - name: Add Android Platform
         run: cordova platform add android@11.0.0
 
@@ -47,15 +50,16 @@ jobs:
         env:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
-      # 8️⃣ 🔥 GENERATE GRADLE WRAPPER (THIS FIXES EVERYTHING)
-      - name: Generate Gradle 7.6.4 Wrapper
+      # 8️⃣ FORCE Gradle 7.6.4 Wrapper (CRITICAL STEP)
+      - name: Force Gradle 7.6.4
         run: |
           cd platforms/android
-          gradle wrapper --gradle-version 7.6.4 --distribution-type all
+          ./gradlew wrapper --gradle-version 7.6.4 --distribution-type all
+          ./gradlew --version
 
-      # 9️⃣ Build APK
+      # 9️⃣ Build APK (USES ./gradlew)
       - name: Build APK
-        run: cordova build android --debug
+        run: cordova build android --debug --no-interactive
 
       # 🔟 Upload APK
       - name: Upload APK
