--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,20 +14,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Node
+      # 2️⃣ Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      # 3️⃣ Java 17 (MANDATORY)
+      # 3️⃣ Setup Java 17 (MANDATORY)
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      # 4️⃣ ⛔ REMOVE SYSTEM GRADLE & INSTALL GRADLE 7.6.4
+      # 4️⃣ Install Gradle 7.6.4 (REQUIRED)
       - name: Install Gradle 7.6.4
         run: |
           wget https://services.gradle.org/distributions/gradle-7.6.4-bin.zip
@@ -36,15 +36,20 @@ jobs:
           echo "/opt/gradle/bin" >> $GITHUB_PATH
           gradle -v
 
-      # 5️⃣ Cordova
+      # 5️⃣ Install Cordova
       - name: Install Cordova
         run: npm install -g cordova@12
 
-      # 6️⃣ Dependencies
+      # 6️⃣ Install project dependencies
       - name: Install dependencies
         run: npm install
 
-      # 7️⃣ Android platform (COMPATIBLE)
+      # 🔹 Install Android SDK Build Tools (BEFORE platform add)
+      - name: Install Android SDK Build Tools
+        run: |
+          yes | sdkmanager "platform-tools" "platforms;android-32" "build-tools;32.0.0"
+
+      # 7️⃣ Add Android Platform (COMPATIBLE)
       - name: Add Android Platform
         run: cordova platform add android@11.0.0
 
@@ -60,7 +65,7 @@ jobs:
       - name: Prepare Android
         run: cordova prepare android
 
-      # 🔟 Build APK (NOW IT WILL USE GRADLE 7.6.4)
+      # 🔟 Build APK (Gradle 7.6.4)
       - name: Build APK
         run: cordova build android --debug --no-interactive
 
