--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,14 +20,14 @@ jobs:
         with:
           node-version: 18
 
-      # 3️⃣ Java 17 (MANDATORY)
+      # 3️⃣ Java 17
       - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      # 4️⃣ Android SDK + Build Tools
+      # 4️⃣ Android SDK
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
         with:
@@ -35,21 +35,21 @@ jobs:
           build-tools: 32.0.0
           cmdline-tools: latest
 
-      # 5️⃣ REMOVE SYSTEM GRADLE 9 (🔥 VERY IMPORTANT)
+      # 5️⃣ Remove system Gradle (VERY IMPORTANT)
       - name: Remove system Gradle
         run: |
-          sudo rm -rf /usr/share/gradle
+          sudo rm -rf /usr/share/gradle || true
           gradle -v || true
 
       # 6️⃣ Install Cordova
       - name: Install Cordova
         run: npm install -g cordova@12
 
-      # 7️⃣ Install npm dependencies
+      # 7️⃣ Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # 8️⃣ Add Android Platform (STABLE)
+      # 8️⃣ Add Android platform
       - name: Add Android Platform
         run: |
           cordova platform rm android || true
@@ -63,18 +63,23 @@ jobs:
         env:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
-      # 🔟 Force Gradle Wrapper 7.6.4
+      # 🔟 Prepare Android (THIS CREATES GRADLE WRAPPER)
+      - name: Prepare Android
+        run: cordova prepare android
+
+      # 1️⃣1️⃣ Force Gradle 7.6.4 (NOW FILE EXISTS)
       - name: Force Gradle 7.6.4
         run: |
           cd platforms/android
+          cat gradle/wrapper/gradle-wrapper.properties
           sed -i 's/gradle-.*-all.zip/gradle-7.6.4-all.zip/' gradle/wrapper/gradle-wrapper.properties
           ./gradlew --version
 
-      # 1️⃣1️⃣ Build Debug APK (USES GRADLE WRAPPER)
+      # 1️⃣2️⃣ Build APK
       - name: Build APK
         run: cordova build android --debug --no-interactive
 
-      # 1️⃣2️⃣ Upload APK
+      # 1️⃣3️⃣ Upload APK
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
