--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,77 +11,48 @@ jobs:
 
     steps:
       # 1️⃣ Checkout
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # 2️⃣ Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      # 2️⃣ Node
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
 
       # 3️⃣ Java 17
-      - name: Setup Java 17
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
       # 4️⃣ Android SDK
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
+      - uses: android-actions/setup-android@v3
         with:
           api-level: 32
           build-tools: 32.0.0
-          cmdline-tools: latest
 
-      # 5️⃣ Remove system Gradle (VERY IMPORTANT)
-      - name: Remove system Gradle
-        run: |
-          sudo rm -rf /usr/share/gradle || true
-          gradle -v || true
+      # 5️⃣ Install Cordova
+      - run: npm install -g cordova@12
 
-      # 6️⃣ Install Cordova
-      - name: Install Cordova
-        run: npm install -g cordova@12
+      # 6️⃣ Dependencies
+      - run: npm install
 
-      # 7️⃣ Install dependencies
-      - name: Install dependencies
-        run: npm install
-
-      # 8️⃣ Add Android platform
-      - name: Add Android Platform
-        run: |
+      # 7️⃣ Android Platform (STABLE)
+      - run: |
           cordova platform rm android || true
-          cordova platform add android@12.0.1
+          cordova platform add android@11.0.0
 
-      # 9️⃣ Firebase config
-      - name: Create google-services.json
-        run: |
+      # 8️⃣ Firebase config
+      - run: |
           mkdir -p platforms/android/app
           echo "$GOOGLE_SERVICES_JSON" > platforms/android/app/google-services.json
         env:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
-      # 🔟 Prepare Android (THIS CREATES GRADLE WRAPPER)
-      - name: Prepare Android
-        run: cordova prepare android
+      # 9️⃣ Build APK
+      - run: cordova build android --debug --no-interactive
 
-      # 1️⃣1️⃣ Force Gradle 7.6.4 (NOW FILE EXISTS)
-      - name: Force Gradle 7.6.4
-        run: |
-          cd platforms/android
-          cat gradle/wrapper/gradle-wrapper.properties
-          sed -i 's/gradle-.*-all.zip/gradle-7.6.4-all.zip/' gradle/wrapper/gradle-wrapper.properties
-          ./gradlew --version
-
-      # 1️⃣2️⃣ Build APK
-      - name: Build APK
-        run: cordova build android --debug --no-interactive
-
-      # 1️⃣3️⃣ Upload APK
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
+      # 🔟 Upload
+      - uses: actions/upload-artifact@v4
         with:
           name: Homey-Vendor-APK
           path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
