Refactor GitHub Actions workflow for clarity

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,53 +13,50 @@ jobs:
       # 1️⃣ Checkout
       - uses: actions/checkout@v4
 
-      # 2️⃣ Node
+      # 2️⃣ Node.js
       - uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      # 3️⃣ Java 17
+      # 3️⃣ Java 17 (REQUIRED)
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      # 4️⃣ Android SDK
+      # 4️⃣ Android SDK (ONLY SDK, no gradle)
       - uses: android-actions/setup-android@v3
         with:
           api-level: 32
           build-tools: 32.0.0
 
-      # 5️⃣ Install Cordova
-      - run: npm install -g cordova@12
+      # 5️⃣ Cordova
+      - name: Install Cordova
+        run: npm install -g cordova@12
 
-      # 6️⃣ Dependencies
-      - run: npm install
+      # 6️⃣ Project dependencies
+      - name: Install npm packages
+        run: npm install
 
-           # 7️⃣ Android Platform (STABLE)
-      - run: |
+      # 7️⃣ Android platform (STABLE + FIXED)
+      - name: Add Android Platform
+        run: |
           cordova platform rm android || true
           cordova platform add android@10.1.2
 
-
-      # 8️⃣ Prepare Android (REQUIRED)
-      - name: Prepare Android
-        run: cordova prepare android
-
-     
-
-
       # 8️⃣ Firebase config
-      - run: |
+      - name: Firebase Config
+        run: |
           mkdir -p platforms/android/app
           echo "$GOOGLE_SERVICES_JSON" > platforms/android/app/google-services.json
         env:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
       # 9️⃣ Build APK
-      - run: cordova build android --debug --no-interactive
+      - name: Build Debug APK
+        run: cordova build android --debug --no-interactive
 
-      # 🔟 Upload
+      # 🔟 Upload APK
       - uses: actions/upload-artifact@v4
         with:
           name: Homey-Vendor-APK
