--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,19 @@ jobs:
           cordova platform rm android || true
           cordova platform add android@10.1.2
 
+        # 🔒 FORCE Cordova to use compatible Gradle (FINAL FIX)
+      - name: Force Gradle 7.6.4 Wrapper
+        run: |
+          cd platforms/android
+          cat > gradle/wrapper/gradle-wrapper.properties <<EOF
+          distributionBase=GRADLE_USER_HOME
+          distributionPath=wrapper/dists
+          distributionUrl=https\://services.gradle.org/distributions/gradle-7.6.4-all.zip
+          zipStoreBase=GRADLE_USER_HOME
+          zipStorePath=wrapper/dists
+          EOF
+
+
       # 8️⃣ Firebase config
       - name: Firebase Config
         run: |
